Revert "fix unit alignment and size according to design (#737)"
This reverts commit dc5e7d24161247d55a36f072c7706785ca9fe64f.

--- a/src/Input/Input.scss
+++ b/src/Input/Input.scss
@@ -374,6 +374,8 @@ $material-gap: 8px;
 
 .unit {
     padding: 0 $gap;
+    font-size: 13px;
+    line-height: 18px;
     color: $paletteD3;
     @include FontLight();
 }
